include ../../support/Makefile.common

alidir = $(includedir)/xmada

ADACOMPILER = ../../support/adacompiler

ADAFLAGS = -I$(srcdir)/../xlib -I$(srcdir)/../xt

ADA_SPECS_WITH_BODY = \
	i-cwistr.ads \
	xm.ads \
	xm_arrow_button.ads \
	xm_arrow_button_gadget.ads \
	xm_bulletin_board.ads \
	xm_cascade_button.ads \
	xm_cascade_button_gadget.ads \
	xm-class_management.ads \
	xm-clipboard_management.ads \
	xm_combo_box.ads \
	xm_command.ads \
	xm_container.ads \
	xm_dialog_shell.ads \
	xm_drawing_area.ads \
	xm_drawn_button.ads \
	xm_file_selection_box.ads \
	xm_form.ads \
	xm_frame.ads \
	xm_icon_gadget.ads \
	xm-implementation.ads \
	xm-input_management.ads \
	xm-internal.ads \
	xm_label.ads \
	xm_label_gadget.ads \
	xm_list.ads \
	xm_main_window.ads \
	xm-menu_management.ads \
	xm_menu_shell.ads \
	xm_message_box.ads \
	xm_notebook.ads \
	xm_paned_window.ads \
	xm-print_management.ads \
	xm-protocol_management.ads \
	xm_push_button.ads \
	xm_push_button_gadget.ads \
	xm-render_tables.ads \
	xm-representation_type_management.ads \
	xm-resource_management.ads \
	xm_row_column.ads \
	xm_scale.ads \
	xm_scroll_bar.ads \
	xm_scrolled_window.ads \
	xm_selection_box.ads \
	xm_separator.ads \
	xm_separator_gadget.ads \
	xm_simple_spin_box.ads \
	xm_spin_box.ads \
	xm-strings.ads \
	xm_text.ads \
	xm_text_field.ads \
	xm_toggle_button.ads \
	xm_toggle_button_gadget.ads \
	xm-traversal_management.ads \
	xm-utilities.ads

ADA_SPECS = $(ADA_SPECS_WITH_BODY) \
	xm_display.ads \
	xm_drag_context.ads \
	xm_drag_icon.ads \
	xm_drop_transfer.ads \
	xm_gadget.ads \
	xm_manager.ads \
	xm_primitive.ads \
	xm_print_shell.ads \
	xm_screen.ads \
	xm_string_defs.ads

ADA_BODIES = $(ADA_SPECS_WITH_BODY:.ads=.adb)

ADA_LIBADD = $(ADA_SPECS:.ads=.lo)

lib_LTLIBRARIES = libxmadaxm.la
libxmadaxm_la_SOURCES =
libxmadaxm_la_LIBADD = $(ADA_LIBADD)
libxmadaxm_la_LDFLAGS = -no-undefined -version-info $(XMADAXMLIBVERSIONINFO)

i-cwistr.lo: i-cwistr.adb
	@chmod a+x $(ADACOMPILER)
	$(LIBTOOL) --tag=CC --mode=compile $(ADACOMPILER) -c $(ADAFLAGS) $(GNAT_PG) $<

install-data-local:
	$(INSTALL) -d $(DESTDIR)$(alidir)
	for f in $(srcdir)/*.ad[sb] *.ali; do $(INSTALL) -m 444 $$f $(DESTDIR)$(alidir); done

### DO NOT REMOVE THIS LINE, IT IS USED BY MAKEDEPEND ###
i-cwistr.lo: \
	$(srcdir)/i-cwistr.adb \
	$(srcdir)/i-cwistr.ads
xm-class_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-class_management.adb \
	$(srcdir)/xm-class_management.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_arrow_button.ads \
	$(srcdir)/xm_arrow_button_gadget.ads \
	$(srcdir)/xm_bulletin_board.ads \
	$(srcdir)/xm_cascade_button.ads \
	$(srcdir)/xm_cascade_button_gadget.ads \
	$(srcdir)/xm_combo_box.ads \
	$(srcdir)/xm_command.ads \
	$(srcdir)/xm_container.ads \
	$(srcdir)/xm_dialog_shell.ads \
	$(srcdir)/xm_display.ads \
	$(srcdir)/xm_drag_context.ads \
	$(srcdir)/xm_drag_icon.ads \
	$(srcdir)/xm_drawing_area.ads \
	$(srcdir)/xm_drawn_button.ads \
	$(srcdir)/xm_drop_transfer.ads \
	$(srcdir)/xm_file_selection_box.ads \
	$(srcdir)/xm_form.ads \
	$(srcdir)/xm_frame.ads \
	$(srcdir)/xm_gadget.ads \
	$(srcdir)/xm_icon_gadget.ads \
	$(srcdir)/xm_label.ads \
	$(srcdir)/xm_label_gadget.ads \
	$(srcdir)/xm_list.ads \
	$(srcdir)/xm_main_window.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_menu_shell.ads \
	$(srcdir)/xm_message_box.ads \
	$(srcdir)/xm_notebook.ads \
	$(srcdir)/xm_paned_window.ads \
	$(srcdir)/xm_primitive.ads \
	$(srcdir)/xm_print_shell.ads \
	$(srcdir)/xm_push_button.ads \
	$(srcdir)/xm_push_button_gadget.ads \
	$(srcdir)/xm_row_column.ads \
	$(srcdir)/xm_scale.ads \
	$(srcdir)/xm_screen.ads \
	$(srcdir)/xm_scroll_bar.ads \
	$(srcdir)/xm_scrolled_window.ads \
	$(srcdir)/xm_selection_box.ads \
	$(srcdir)/xm_separator.ads \
	$(srcdir)/xm_separator_gadget.ads \
	$(srcdir)/xm_text.ads \
	$(srcdir)/xm_text_field.ads \
	$(srcdir)/xm_toggle_button.ads \
	$(srcdir)/xm_toggle_button_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-class_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_application_shell.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_override_shell.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads \
	$(top_srcdir)/source/xt/xt_shell.ads \
	$(top_srcdir)/source/xt/xt_top_level_shell.ads \
	$(top_srcdir)/source/xt/xt_vendor_shell.ads \
	$(top_srcdir)/source/xt/xt_wm_shell.ads
xm-clipboard_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-clipboard_management.adb \
	$(srcdir)/xm-clipboard_management.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-implementation.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.adb \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-input_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-input_management.adb \
	$(srcdir)/xm-input_management.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-internal.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-internal.adb \
	$(srcdir)/xm-internal.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-menu_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-cursors.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-menu_management.adb \
	$(srcdir)/xm-menu_management.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-print_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-print_management.adb \
	$(srcdir)/xm-print_management.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-protocol_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-graphic_output.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-protocol_management.adb \
	$(srcdir)/xm-protocol_management.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt-utilities.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-render_tables.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.adb \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-render_tables.adb \
	$(srcdir)/xm-render_tables.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-representation_type_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.adb \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-representation_type_management.adb \
	$(srcdir)/xm-representation_type_management.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-resource_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.adb \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-resource_management.adb \
	$(srcdir)/xm-resource_management.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-strings.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-strings.adb \
	$(srcdir)/xm-strings.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-traversal_management.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-traversal_management.adb \
	$(srcdir)/xm-traversal_management.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm-utilities.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-colors.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm-utilities.adb \
	$(srcdir)/xm-utilities.ads \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.adb \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.adb \
	$(srcdir)/xm.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads
xm_arrow_button.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_arrow_button.adb \
	$(srcdir)/xm_arrow_button.ads \
	$(srcdir)/xm_primitive.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_arrow_button_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_arrow_button_gadget.adb \
	$(srcdir)/xm_arrow_button_gadget.ads \
	$(srcdir)/xm_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
xm_bulletin_board.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_bulletin_board.adb \
	$(srcdir)/xm_bulletin_board.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_cascade_button.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_cascade_button.adb \
	$(srcdir)/xm_cascade_button.ads \
	$(srcdir)/xm_label.ads \
	$(srcdir)/xm_primitive.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_cascade_button_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_cascade_button_gadget.adb \
	$(srcdir)/xm_cascade_button_gadget.ads \
	$(srcdir)/xm_gadget.ads \
	$(srcdir)/xm_label_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
xm_combo_box.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_combo_box.adb \
	$(srcdir)/xm_combo_box.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_command.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_bulletin_board.ads \
	$(srcdir)/xm_command.adb \
	$(srcdir)/xm_command.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_selection_box.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_container.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_container.adb \
	$(srcdir)/xm_container.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_dialog_shell.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_dialog_shell.adb \
	$(srcdir)/xm_dialog_shell.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_core.ads \
	$(top_srcdir)/source/xt/xt_shell.ads \
	$(top_srcdir)/source/xt/xt_vendor_shell.ads \
	$(top_srcdir)/source/xt/xt_wm_shell.ads
xm_display.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_display.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_application_shell.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_core.ads \
	$(top_srcdir)/source/xt/xt_shell.ads \
	$(top_srcdir)/source/xt/xt_top_level_shell.ads \
	$(top_srcdir)/source/xt/xt_vendor_shell.ads \
	$(top_srcdir)/source/xt/xt_wm_shell.ads
xm_drag_context.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_drag_context.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_drag_icon.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_drag_icon.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads
xm_drawing_area.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_drawing_area.adb \
	$(srcdir)/xm_drawing_area.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_drawn_button.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_drawn_button.adb \
	$(srcdir)/xm_drawn_button.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_drop_transfer.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_drop_transfer.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads
xm_file_selection_box.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_bulletin_board.ads \
	$(srcdir)/xm_file_selection_box.adb \
	$(srcdir)/xm_file_selection_box.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_selection_box.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_form.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_bulletin_board.ads \
	$(srcdir)/xm_form.adb \
	$(srcdir)/xm_form.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_frame.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_frame.adb \
	$(srcdir)/xm_frame.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_gadget.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
xm_icon_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_gadget.ads \
	$(srcdir)/xm_icon_gadget.adb \
	$(srcdir)/xm_icon_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
xm_label.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_label.adb \
	$(srcdir)/xm_label.ads \
	$(srcdir)/xm_primitive.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_label_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_gadget.ads \
	$(srcdir)/xm_label_gadget.adb \
	$(srcdir)/xm_label_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
xm_list.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_list.adb \
	$(srcdir)/xm_list.ads \
	$(srcdir)/xm_primitive.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_main_window.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_main_window.adb \
	$(srcdir)/xm_main_window.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_scrolled_window.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_manager.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_manager.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_menu_shell.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_menu_shell.adb \
	$(srcdir)/xm_menu_shell.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_core.ads \
	$(top_srcdir)/source/xt/xt_override_shell.ads \
	$(top_srcdir)/source/xt/xt_shell.ads
xm_message_box.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_bulletin_board.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_message_box.adb \
	$(srcdir)/xm_message_box.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_notebook.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_notebook.adb \
	$(srcdir)/xm_notebook.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_paned_window.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_paned_window.adb \
	$(srcdir)/xm_paned_window.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_primitive.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_primitive.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_print_shell.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_print_shell.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_application_shell.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_core.ads \
	$(top_srcdir)/source/xt/xt_shell.ads \
	$(top_srcdir)/source/xt/xt_top_level_shell.ads \
	$(top_srcdir)/source/xt/xt_vendor_shell.ads \
	$(top_srcdir)/source/xt/xt_wm_shell.ads
xm_push_button.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_label.ads \
	$(srcdir)/xm_primitive.ads \
	$(srcdir)/xm_push_button.adb \
	$(srcdir)/xm_push_button.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_push_button_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_gadget.ads \
	$(srcdir)/xm_label_gadget.ads \
	$(srcdir)/xm_push_button_gadget.adb \
	$(srcdir)/xm_push_button_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
xm_row_column.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_row_column.adb \
	$(srcdir)/xm_row_column.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_scale.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_scale.adb \
	$(srcdir)/xm_scale.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_screen.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_screen.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_scroll_bar.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_primitive.ads \
	$(srcdir)/xm_scroll_bar.adb \
	$(srcdir)/xm_scroll_bar.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_scrolled_window.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_scrolled_window.adb \
	$(srcdir)/xm_scrolled_window.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_selection_box.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_bulletin_board.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_selection_box.adb \
	$(srcdir)/xm_selection_box.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_separator.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_primitive.ads \
	$(srcdir)/xm_separator.adb \
	$(srcdir)/xm_separator.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_separator_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_gadget.ads \
	$(srcdir)/xm_separator_gadget.adb \
	$(srcdir)/xm_separator_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
xm_simple_spin_box.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_simple_spin_box.adb \
	$(srcdir)/xm_simple_spin_box.ads \
	$(srcdir)/xm_spin_box.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_spin_box.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_manager.ads \
	$(srcdir)/xm_spin_box.adb \
	$(srcdir)/xm_spin_box.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_composite.ads \
	$(top_srcdir)/source/xt/xt_constraint.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_string_defs.lo: \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/xm_string_defs.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_string_defs.ads
xm_text.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_primitive.ads \
	$(srcdir)/xm_text.adb \
	$(srcdir)/xm_text.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_text_field.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_primitive.ads \
	$(srcdir)/xm_text_field.adb \
	$(srcdir)/xm_text_field.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_toggle_button.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_label.ads \
	$(srcdir)/xm_primitive.ads \
	$(srcdir)/xm_toggle_button.adb \
	$(srcdir)/xm_toggle_button.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_core.ads
xm_toggle_button_gadget.lo: \
	$(top_srcdir)/source/xlib/xlib-atoms.ads \
	$(top_srcdir)/source/xlib/xlib-events.ads \
	$(top_srcdir)/source/xlib/xlib-extensions-print.ads \
	$(top_srcdir)/source/xlib/xlib-extensions.ads \
	$(top_srcdir)/source/xlib/xlib-implementation.ads \
	$(top_srcdir)/source/xlib/xlib-resource_manager.ads \
	$(top_srcdir)/source/xlib/xlib.ads \
	$(srcdir)/i-cwistr.ads \
	$(srcdir)/xm-implementation.ads \
	$(srcdir)/xm.ads \
	$(srcdir)/xm_gadget.ads \
	$(srcdir)/xm_label_gadget.ads \
	$(srcdir)/xm_toggle_button_gadget.adb \
	$(srcdir)/xm_toggle_button_gadget.ads \
	$(top_srcdir)/source/xt/xt-ancillary_types.ads \
	$(top_srcdir)/source/xt/xt-composite_management.ads \
	$(top_srcdir)/source/xt/xt-implementation.ads \
	$(top_srcdir)/source/xt/xt.ads \
	$(top_srcdir)/source/xt/xt_object.ads \
	$(top_srcdir)/source/xt/xt_rect_obj.ads
